bluetooth: Call error callback when characteristics get destroyed during a GATT Event (mac)

When a device disconnects all its characteristics get destroyed which
was causing callbacks for GATT operations to get dropped. This patch
fixes only mac's write and read. Follow up patches will fix android and
windows.

BUG=621901

Review-Url: https://codereview.chromium.org/2347133002
Cr-Commit-Position: refs/heads/master@{#420558}

Former-commit-id: 0fb374e6d52746fa37dc66f9bbb3f56a5eb11883